Static CSS and JS files for bootstrap.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <title>Stream as module</title>
     <script src="/dronestream/nodecopter-client.js" type="text/javascript" charset="utf-8"></script>
-    <link href="https://bootswatch.com/lumen/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
@@ -45,6 +45,13 @@
                 </button>
             </form>
         </div>
+        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+            <form method="post" action="/circle-attempt">
+                <button type="submit" class="btn btn-primary" style="width:100%">
+                    Attempt Cirlce
+                </button>
+            </form>
+        </div>
 
     </div>
     
@@ -53,9 +60,9 @@
     </div>
 
     <!-- jQuery -->
-    <script src="http://code.jquery.com/jquery.js"></script>
+    <script src="js/jquery.js"></script>
     <!-- Bootstrap JavaScript -->
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     
 </body>
 </html>
