--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
             Land
         </button>
     </form>
+    <form method="post" action="/detectfaces">
+        <button type="submit">
+            Display
+        </button>
+    </form>
     
 </body>
 </html>
