--- a/index.html
+++ b/index.html
@@ -2,53 +2,59 @@
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <title>Stream as module</title>
+    <title>Hack Jacks!</title>
     <script src="/dronestream/nodecopter-client.js" type="text/javascript" charset="utf-8"></script>
     <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
     <div class="container center-block">
-    <h1 id="heading">Stream through a normal require("http").createServer</h1>
-    <div id="droneStream" style="width: 300px; height: 200px">   </div>
+    <h1 id="heading">Hack Jacks Hack Drones</h1>
 
     <script type="text/javascript" charset="utf-8">
         new NodecopterStream(document.getElementById("droneStream"));
     </script>
 
     <div class="row">
-        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+        <div class="col-lg-3">
             <form method="post" action="/takeoff">
                 <button type="submit" class="btn btn-primary" style="width:100%">
                 Take Off
                 </button>
             </form>
         </div>
-        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+        <div class="col-lg-3">
             <form method="post" action="/clockwise">
                  <button type="submit" class="btn btn-primary" style="width:100%">
                     Counter-Clockwise
                 </button>
             </form>
         </div>
-        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+        <div class="col-lg-3">
             <form method="post" action="/stop">
                 <button type="submit" class="btn btn-primary" style="width:100%">
                     Stop Movement
                 </button>
             </form>
         </div>
-        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+        <div class="col-lg-3">
             <form method="post" action="/land">
                 <button type="submit" class="btn btn-primary" style="width:100%">
                     Land
                 </button>
             </form>
         </div>
-        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+        <div class="col-lg-3">
             <form method="post" action="/filtercolor">
                 <button type="submit" class="btn btn-primary" style="width:100%">
-                    Filter
+                    Filter (experimental, danger!)
+                </button>
+            </form>
+        </div>
+        <div class="col-lg-3">
+            <form method="post" action="/facefinder">
+                <button type="submit" class="btn btn-primary" style="width:100%">
+                    Autonomous Face Finder (30s)
                 </button>
             </form>
         </div>
